--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,7 +1,7 @@
 <div class="ui small inverted menu">
     <div class="ui container">
     <a class="item">
-        <%= link_to  "Chatroom", "#", class:"item" %>
+        <%= link_to  "Chatroom", root_path, class:"item" %>
     </a>
     <a class="item">
         Messages
@@ -10,7 +10,7 @@
         <div class="ui dropdown item">
         Account <i class="dropdown icon"></i>
         <div class="menu">
-            <a class="item">Login</a>
+            <%= link_to  "Login", login_path, class:"item" %>
             <a class="item">Logout</a>
             <a class="item">Sign up</a>
         </div>
