--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,14 +10,20 @@
         <div class="ui dropdown item">
         Account <i class="dropdown icon"></i>
         <div class="menu">
+        <% if logged_in? %>
+            <%= link_to "Logout", logout_path, class:"item", method: :delete %>
+        <% else %>
             <%= link_to  "Login", login_path, class:"item" %>
-            <a class="item">Logout</a>
             <a class="item">Sign up</a>
+        <%end %>
+            
         </div>
         </div>
-        <div class="item">
-            <div class="ui primary button">Sign Up</div>
-        </div>
+        <% if !logged_in? %>
+            <div class="item">
+                <%= link_to "Login", login_path, class:"ui primary button"%>
+            </div>
+        <% end %>
     </div>
     </div>
 </div>
