--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -29,7 +29,7 @@
         <div class="ui fluid raised card chatbox">
             <div class="content">
                 <div class="ui inverted vertical menu">
-                    <a class="active item">
+                    <a class="item">
                         Home
                     </a>
                     <a class="item">
